# Amen-Bank-PFE

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml
.mysql-data/: DESKTOP-T08M6OJ.err  aria_log.00000001  aria_log_control  my.ini
.mysql-data/amenbank/: accounts.frm  accounts.ibd  activation_tokens.frm  activation_tokens.ibd  admin_invitations.frm  admin_invitations.ibd  admins.frm  admins.ibd  audit_logs.frm  audit_logs.ibd  backup_codes.frm  backup_codes.ibd  beneficiaries.frm  beneficiaries.ibd  chatbot_messages.frm  chatbot_messages.ibd  chatbot_sessions.frm  chatbot_sessions.ibd  credit_applications.frm  (+35 more)
backend/: Dockerfile  TempA.java  TempB.java  checkstyle.xml  effective_pom.txt  effective_pom_utf8.txt  maven-settings.xml  mvnw  pom.xml  run-dev.ps1  start-backend-local.ps1
chatbot/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg  start-chatbot-local.ps1
chatbot/app/: config.py  database.py  main.py
chatbot/app/models/: session.py
chatbot/app/routers/: analytics.py  chat.py  health.py
chatbot/app/schemas/: chat.py
chatbot/app/services/: chatbot.py
chatbot/tests/: test_chatbot.py
docs/: Architecture.md  Deployment.md
frontend/: .eslintrc.json  Dockerfile  angular.json  cypress.config.ts  nginx-spa.conf  package-lock.json  package.json  tailwind.config.js
(+281 files in other folders)
