[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "amenbank-chatbot"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","W","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
